fixed footer and scroll overflow

--- a/style.css
+++ b/style.css
@@ -30,6 +30,7 @@
 }
 
 body {
+    min-height: 100%;
     margin: 0;
     background-color: var(--coral);
 }
@@ -44,6 +45,7 @@ header {
     border-bottom: solid 1px var(--darker);
     margin-left: 27vw;
     margin-right: 27vw;
+    padding-bottom: 1rem;
 }
 
 h1,
@@ -57,6 +59,8 @@ ul {
     list-style: none;
     display: flex;
     justify-content: space-evenly;
+    margin: 0;
+    padding: 0;
 }
 
 ul.navButtons {
@@ -117,7 +121,7 @@ a {
 
 footer {
     grid-column: 1/4;
-    color: grey;
+    color: var(--bodycolor);
     font-weight: 100;
     text-align: center;
     font-size: .8rem;
@@ -184,7 +188,6 @@ button.start {
     justify-content: space-evenly;
     margin: 1.5rem -1rem 0rem auto;
     color: white;
-    margin-left: -1rem;
 }
 
 .currentBreak {
@@ -270,6 +273,20 @@ ul.bullets {
     margin-left: -1rem;
 }
 
+.bottomGroup {
+    text-align: center;
+    margin-top: 4rem;
+    /* border-top: solid 2px var(--bodycolor); */
+}
+
 .pseudoNav a {
-    color: grey;
+    color: var(--darkest);
+    font-weight: 500;
+    font-size: .9rem;
+    text-transform: uppercase;
+}
+
+ul.pseudoNav {
+    padding-left: 4rem;
+    padding-right: 4rem;
 }
